testdata/baselines/reference/submodule/compiler/inheritanceStaticMembersIncompatible.errors.txt
inheritanceStaticMembersIncompatible.ts(5,7): error TS2417: Class static side '{ new(): b; x: number; prototype: b; }' incorrectly extends base class static side '{ x: string; prototype: a; }'.
  Types of property 'x' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== inheritanceStaticMembersIncompatible.ts (1 errors) ====
    class a {
        static x: string;
    }
    
    class b extends a {
          ~
!!! error TS2417: Class static side '{ new(): b; x: number; prototype: b; }' incorrectly extends base class static side '{ x: string; prototype: a; }'.
!!! error TS2417:   Types of property 'x' are incompatible.
!!! error TS2417:     Type 'number' is not assignable to type 'string'.
        static x: number;
    }